# pythonProject_oop

./: .coverage  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_task_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_load_json_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_mixin_product_py.html  z_145eef247bfb46b6_product_py.html
src/: base_task.py  category.py  load_json.py  main.py  mixin_product.py  product.py
tests/: test_main.py  test_mixin_base.py
