[project]
name = "pythonproject-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Кирилл Расторгуев",email = "kirillrastorguev5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
